--- a/notebooks/testOpenAI.ipynb
+++ b/notebooks/testOpenAI.ipynb
@@ -38,7 +38,7 @@
     "'''\n",
     "client = OpenAI(\n",
     "    # This is the default and can be omitted\n",
-    "    api_key=\"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\",\n",
+    "    api_key=\"\",\n",
     ")\n",
     "\n",
     "chat_completion = client.chat.completions.create(\n",
@@ -80,7 +80,17 @@
     "\n",
     "\n",
     "# Configurar la API key de OpenAI\n",
-    "openai.api_key = \"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\"\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "#Load enviaronment variables\n",
+    "load_dotenv()\n",
+    "\n",
+    "OPENAI_KEY = os.getenv('OPENAI_KEY')\n",
+    "#print(\"OPENAI_KEY\", OPENAI_KEY)\n",
+    "\n",
+    "# Configurar la API key de OpenAI\n",
+    "openai.api_key = OPENAI_KEY\n",
     "\n",
     "# Definir un prompt sencillo\n",
     "prompt = \"Escribe un poema sobre la naturaleza\"\n",
