--- a/notebooks/testOpenAI.ipynb
+++ b/notebooks/testOpenAI.ipynb
@@ -15,42 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nclient = OpenAI(\\n    # This is the default and can be omitted\\n    api_key=\"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\",\\n)\\n\\nchat_completion = client.chat.completions.create(\\n    messages=[\\n        {\\n            \"role\": \"user\",\\n            \"content\": \"Say this is a test\",\\n        }\\n    ],\\n    model=\"gpt-3.5-turbo\",\\n)\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "client = OpenAI(\n",
-    "    # This is the default and can be omitted\n",
-    "    api_key=\"\",\n",
-    ")\n",
+    "import openai\n",
     "\n",
-    "chat_completion = client.chat.completions.create(\n",
-    "    messages=[\n",
-    "        {\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": \"Say this is a test\",\n",
-    "        }\n",
-    "    ],\n",
-    "    model=\"gpt-3.5-turbo\",\n",
-    ")\n",
-    "'''"
+    "# Configurar la API key de OpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
    ]
   },
   {
@@ -77,12 +46,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Configurar la API key de OpenAI\n",
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "\n",
     "#Load enviaronment variables\n",
     "load_dotenv()\n",
     "\n",
